--- a/src/index.css
+++ b/src/index.css
@@ -49,4 +49,11 @@
 .ant-select-selector{
     height: 2.5rem !important;
     border-radius: 6px !important;
+    
+}
+
+.ant-select-selection-item{
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
 }
