--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,7 @@
     justify-content: flex-start !important;
     align-items: center !important;
 }
+
+.ant-notification-notice-message{
+    font-weight: 700;
+}
