--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,31 @@
 .ant-notification-notice-message{
     font-weight: 700;
 }
+
+.PhoneInputInput{
+    height: 40px;
+    border: 1px solid #D9D9D9;
+    border-radius: 0px 0px 0px 0px; 
+    
+}
+
+.PhoneInputInput--focus {
+    border: 1px solid #62B4F7 !important;
+  }
+
+.PhoneInput{
+    height: 40px;
+    border: 1px solid #D9D9D9;
+    border-radius: 6px 6px;
+}
+
+.PhoneInputCountry{
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+}
+
+.ant-select-selector{
+    display: flex !important;
+    align-content: center !important;
+    align-items: center !important;
+}
